force-app/main/default/objects/Project__c/fields/Milestones_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestones_Completed__c</fullName>
    <label>Milestones Completed</label>
    <summaryFilterItems>
        <field>Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>