force-app/main/default/objects/Project__c/fields/Perc_Complete__c.field-meta.xml
<CustomField>
    <fullName>Perc_Complete__c</fullName>
    <formula>IF(  Total_Milestone__c &gt; 0, ( Milestones_Completed__c /Total_Milestone__c ) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>