force-app/main/default/objects/Project__c/fields/Total_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone__c</fullName>
    <label>Total Milestone</label>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>